--- a/src/styles/PopUp.css
+++ b/src/styles/PopUp.css
@@ -45,6 +45,10 @@
   justify-content: center;
 }
 
+.backdrop-content {
+  zoom: 130%;
+}
+
 @media screen and (max-width: 1024px) {
   .pop-up-course-box{
     width: 80%;
