--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -15,6 +15,8 @@
 .card {
   width: 100%;
   height: 407px;
+  border-radius: 2px;
+  box-shadow: 0 4px 2px 0 darkgray;
 }
 
 .card:hover {
@@ -67,7 +69,17 @@
   }
   .card {
     width: 100%;
-    height: max-content;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .content-card-container {
+    margin: 0px 20%;
+  }
+  .card {
+    width: 100%;
+    height: 500px;
   }
 }
 
