--- a/src/styles/Jumbotron.css
+++ b/src/styles/Jumbotron.css
@@ -62,6 +62,7 @@
     padding: 15px 10px;
     display: flex;
     justify-content: space-between;
+    background-color: #ffffff;
 }
 
 .jumbotron-right .video-content iframe {
@@ -138,5 +139,49 @@
     .video-content .buttom .right{
         width: 50%;
     }
-
+}
+@media screen and (max-width: 768px) {
+    .jumbotron {
+        display: flex;
+        flex-direction: column;
+    }
+    .jumbotron-left {
+        width: 100%;
+    }
+    .jumbotron-right {
+        width: 105%;
+    }
+    .video-content .bottom {
+        display: flex;
+        /* flex-direction: column; */
+    }
+    .video-content .buttom .left{
+        width: 50%;
+    }
+    .video-content .buttom .right{
+        width: 50%;
+    }
+}
+@media screen and (max-width: 476px) {
+    .jumbotron {
+        display: flex;
+        flex-direction: column;
+    }
+    .jumbotron-left {
+        width: 100%;
+    }
+    .jumbotron-right {
+        width: 105%;
+        margin-bottom: 90px;
+    }
+    .video-content .bottom {
+        display: flex;
+        flex-direction: column;
+    }
+    .video-content .buttom .left{
+        width: 50%;
+    }
+    .video-content .buttom .right{
+        width: 50%;
+    }
 }
