--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -1,24 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&display=swap");
 
 .signup-page{
-  width: 100%;
+  width: 80%;
   margin: auto;
+  display: flex;
+  padding: 50px;
+  justify-content:center;
+  align-items: center;
 }
 
 .signup {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   box-sizing: border-box;
   border: 2px solid black;
-  width: 531px;
+  width: max-content;
   height: 559px;
   padding: 50px;
-  margin: auto;
-
   background: #ffffff;
   border: 1px solid #e6e6e6;
-
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
 }
@@ -87,13 +85,20 @@ select:hover {
   color: rgb(236, 46, 46);
 }
 
+.email-password-username-field{
+  border-bottom: 2px rgb(214, 211, 211) solid;
+  padding-top: 8px;
+  padding-bottom: 2px;
+  background: rgba(252, 252, 252, 1);
+}
+
 .form input {
   border: none;
-  margin-top: 10px;
+  /* margin-top: 10px;
   padding-left: 10px;
   border-bottom: 1px solid rgba(159, 159, 159, 1);
   width: 430px;
-  height: 42px;
+  height: 42px; */
   background-color: rgba(252, 252, 252, 1);
 }
 
@@ -101,12 +106,17 @@ select:hover {
   outline: 0;
 }
 
+.btn{
+  display: flex;
+  justify-content: flex-end;
+}
+
 .btn-signup {
   background: #16213b;
   border-radius: 2px;
   padding: 8px 20px;
   width: 104px;
-  margin-left: 312px;
+ 
 
   font-family: Montserrat;
   font-style: normal;
@@ -120,8 +130,9 @@ select:hover {
   background: #4f618b;
   border-radius: 2px;
   padding: 8px 20px;
-  width: 104px;
-  margin-left: 312px;
+  /* width: 104px; */
+  display: flex;
+  justify-content: flex-end;
 
   font-family: Montserrat;
   font-style: normal;
@@ -142,3 +153,12 @@ select:hover {
   width: 100%;
 }
 
+@media screen and (max-width: 480px){
+  .signup{
+    width: 350px;
+  }
+
+  .email-password-username-field{
+    width: 250px;
+  }
+}
