--- a/src/styles/StudentBoard.css
+++ b/src/styles/StudentBoard.css
@@ -21,8 +21,6 @@
     display: flex;
     flex-direction: column;
     margin-right: 40px;
-    /* width: 250px; */
-    /* height: 470px; */
     height: max-content;
     margin-bottom: 20px;
     background-color: white;
@@ -75,7 +73,6 @@
     flex-direction: column;
     width: 950px;
     height: 800px;
-    
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -249,14 +246,6 @@ form input {
     text-align: center;
 }
 
-/* .student-profile-edit button {
-    background-color: #16213B;
-    border-radius: 2px;
-    color: white;
-    font-size: 14px;
-    padding: 10px 24px;
-} */
-
 .download-certificate span{
     cursor: pointer;
     color: rgb(46, 162, 201);
@@ -368,7 +357,7 @@ form input {
     .student-profile {
         display: flex;
         flex-direction: column;
-        padding: 20%;
+        padding: 10%;
         width: 100%;
         height: 470px;
         background-color: white;
@@ -411,5 +400,36 @@ form input {
         padding: 10px 24px;
         line-height: 20px;
     }
-    
+    .edit-photo-icon {
+        width: 30px;
+        position: relative;
+        top: -40px;
+        left: 53%;
+        opacity: 0.8;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .student-profile {
+        display: flex;
+        flex-direction: column;
+        padding: 10%;
+        width: 100%;
+        height: 470px;
+        background-color: white;
+        text-align: center;
+    }
+    .edit-photo-icon {
+        width: 30px;
+        position: relative;
+        top: -40px;
+        left: 53%;
+        opacity: 0.8;
+    }
+    .course-detail-first {
+        line-height: 20px;
+    }
+    .course-detail-second {
+        line-height: 20px;
+    }
 }
