--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -16,7 +16,7 @@
   width: 100%;
   height: 407px;
   border-radius: 2px;
-  box-shadow: 0 4px 2px 0 darkgray;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .card:hover {
@@ -75,7 +75,16 @@
 
 @media screen and (max-width: 768px){
   .content-card-container {
-    margin: 0px 20%;
+    margin: 0px 15%;
+  }
+  .card {
+    width: 100%;
+    height: 500px;
+  }
+}
+@media screen and (max-width: 360px){
+  .content-card-container {
+    margin: 0px 10%;
   }
   .card {
     width: 100%;
