--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,8 +1,6 @@
 .footer {
   background: white;
   width: 100%;
-  /* height: 192px; */
-  /* position: relative; */
   bottom: 0px;
   left: 0px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
@@ -148,6 +146,11 @@
     padding-left: 25px;
   }
 
+  .footer-section p {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
   .footer-section .copyright {
     padding-right: 25px;
   }
@@ -165,5 +168,36 @@
   }
   .register-button .own-class {
     display: block;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .footer-section p {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .footer-section h4 {
+    font-size: 12px;
+    line-height: 8px;
+  }
+
+  .footer-section .copyright {
+    padding-right: 0px;
+    padding-bottom: 70px;
+  }
+
+  .footer-section .copyright h4 span{
+    font-size: 14px;
+  }
+
+  .footer-section .course {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+  }
+
+  /* content  */
+  .content-register {
+    zoom: 50%;
   }
 }
