--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -13,7 +13,7 @@
 
 .login-form {
   width: 531px;
-  height: 500px;
+  height: max-content;
   background: #ffffff;
   border: 1px solid #e6e6e6;
   box-sizing: border-box;
@@ -100,4 +100,13 @@
   color: #ffffff;
   font-weight: bold;
   cursor: pointer;
+}
+
+@media screen and (max-width: 360px){
+  .btn-login{
+    padding-bottom: 10px;
+  }
+  .forget-pass{
+    padding: 5px 0px 10px 0px;
+  }
 }
