--- a/src/styles/CourseDetail.css
+++ b/src/styles/CourseDetail.css
@@ -209,7 +209,7 @@
 @media screen and (max-width: 1040px) {
   .main-course .center {
     width: 100%;
-    height: 900px;
+    height: 1200px;
     background: #e6e6e6;
   }
   .course-detail-right {
@@ -223,6 +223,9 @@
     box-sizing: border-box;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
+  .main-course .center .course-center{
+    width: 400px;
+  }
 }
 
 @media screen and (width: 768px){
@@ -231,7 +234,7 @@
     /* width: 400px; */
     height: 498px;
     left: 100px;
-    top: 900px;
+    top: 1200px;
     margin: 200px;
     z-index: 0.99;
     background: white;
@@ -241,11 +244,11 @@
   }
 }
 
-@media screen and (max-width: 640px){
+/* @media screen and (max-width: 640px){
   .course-detail-right{
     top: 850px;
   }
-}
+} */
 
 @media screen and (max-width: 540px){
   .course-detail-left{
@@ -261,7 +264,7 @@
     width: 400px;
     height: 498px;
     left: 50px;
-    top: 850px;
+    top: 1000px;
     margin: 70px auto;
     z-index: 0.99;
     background: white;
@@ -289,7 +292,7 @@
     width: 350px;
     height: 498px;
     left: 50px;
-    top: 870px;
+    top: 1200px;
     margin: 70px auto;
     z-index: 0.99;
     background: white;
@@ -302,7 +305,32 @@
   }
 }
 
-@media screen and (max-width: 414px){
+@media screen and (max-width: 300px){
+  .course-detail-right{
+    top: 1200px;
+  }
+  .main-course .center .course-center{
+    width: 300px;
+  }
+  .course-detail-right {
+    /* position: absolute; */
+    width: 250px;
+    height: 498px;
+    left: 50px;
+    top: 1200px;
+    margin: 70px auto;
+    z-index: 0.99;
+    background: white;
+    border: 1px solid #e6e6e6;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .content-p {
+    left: -90px;
+}
+}
+
+/* @media screen and (max-width: 414px){
   .course-detail-right {
     top: 910px;
   }
@@ -324,4 +352,4 @@
   .course-detail-right{
     top: 880px;
   }
-}
+} */
