--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -19,7 +19,7 @@
   box-sizing: border-box;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
-  padding: 42px 42px;
+  padding: 42px;
   font-size: 14px;
   font-weight: 400;
 }
@@ -108,5 +108,8 @@
   }
   .forget-pass{
     padding: 5px 0px 10px 0px;
+  }
+  .login-form {
+    padding: 80px;
   }
 }
